Changed path of css and js files

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Martín Díaz</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
+    <script src='js/main.js' async></script>
+    <!-- <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous"> -->
 </head>
 <body>
-    
+    <div class="main-container">
+        <h1 id="title" class="text">Martín Díaz</h1>
+        <h3 class="text">Full Stack Developer</h3>
+        <div>
+            <!-- Links to GitHub, etc -->
+        </div>
+    </div>
 </body>
 </html>
