Moved the import of fonts to the HTML directly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Martín Díaz</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fenix&family=Open+Sans&display=swap" rel="stylesheet">
+
+    <!-- Normalize.css -->
     <link rel='stylesheet' type='text/css' media='screen' href='css/normalize.css'>
+
+    <!-- Custom style and script -->
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src='js/main.js' async></script>
 </head>
