--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Martín Díaz</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Martín Díaz">
+    <meta name="description" content="Martín Díaz, a Full Stack Developer.">
+    <meta name="keywords"
+        content="developer, frontend, backend, full stack, developer, dev, programmer, github, pegasus8, golang, c#, csharp, rust, python, javascript, css, uruguay">
+    <meta name="robots" content="all">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
