--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         content="developer, frontend, backend, full stack, developer, dev, programmer, github, pegasus8, golang, c#, csharp, rust, python, javascript, css, uruguay">
     <meta name="robots" content="all">
 
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
