--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
 <body>
     <div class="main-container">
         <div class="container container-col">
-            <h1 id="title" class="text">Martín Díaz</h1>
-            <h3 id="description">Full Stack Developer</h3>
+            <h1 id="title">Martín Díaz</h1>
+            <h3 id="description" class="text-secondary">Full Stack Developer</h3>
             <div class="container social">
                 <!-- Links to GitHub, etc -->
                 <a class="icon" href="https://github.com/Pegasus8" rel="noreferrer">
@@ -47,6 +47,18 @@
                 </a>
             </div>
         </div>
+        <footer>
+            <div id="location" class="container text-secondary">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="feather feather-map-pin"
+                    style="place-self: center; margin: .4rem; transform: translateY(-2px);">
+                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                    <circle cx="12" cy="10" r="3"></circle>
+                </svg>
+                <p>Montevideo, Uruguay</p>
+            </div>
+        </footer>
     </div>
 </body>
 
